@@ -1,3 +1,10 @@
+openmolar (0.2.1+bzr0750-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream version (bzr 750)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Jun 2012 10:04:06 +0100
+
+
 openmolar (0.2.1+bzr0749-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream version (ability to specify dentist for recall)
